<resources>
    <string name="app_name">care-it</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="Number">Number</string>

    <string name="pill_name">Pill Name</string>
    <string name="pill_start_month">Select the Month</string>
    <string name="pill_start_day">Select the Day</string>
    <string name="pill_start_year">Select the Year</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="addPill">Add Pill</string>
    <string name="pillRep">How many times a day?</string>
    <string name="pillReps">How many pills per session?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Create Account</string>
    <string name="my_pills_item">My Pills</string>
    <string name="my_contacts_item">My Contacts</string>
    <string name="my_family_item">My Family</string>
    <string name="add">+</string>

    <string name="pboxname">my pill box</string>
    <string name="takePicture">Take A Picture</string>
    <string name="e_g_1_if_take_1_tablet_by_the_mouth_every_3_days">e.g. 1 if Take 1 tablet by the mouth every 3 days</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="how_many_per_session">How many per session</string>
    <string name="times_per_day">Times per day</string>
    <string name="amount_in_bottle">Amount in bottle</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="notification">notifications</string>
    <string name="morningnote">morning time:</string>
    <string name="afternote">afternoon time:</string>
    <string name="nightnote">night time:</string>
</resources>
